--- a/labs/lab01/package.json
+++ b/labs/lab01/package.json
@@ -3,20 +3,22 @@
   "version": "0.0.1",
   "description": "React server rendering example",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack-dev-server"
   },
   "author": "Roger Jin",
   "dependencies": {
-    "buttercms": "^1.0.15",
-    "path": "^0.12.7",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "buttercms": "^1.1.0",
+    "path": "*",
+    "react": "*",
+    "react-dom": "*"
   },
   "devDependencies": {
-    "webpack": "^1.12.14",
-    "babel-cli": "^6.6.5",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0"
+    "babel-cli": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
+    "json-loader": "^0.5.7",
+    "webpack": "*",
+    "webpack-dev-server": "^2.9.4"
   }
 }
